Fancy map stuff v1

--- a/schedule_map.html
+++ b/schedule_map.html
@@ -73,9 +73,9 @@
         </ul>
 
 
-        <div class="wireframeBlock">Some kind of awesome visual</div>
+        <iframe src="map.html" class="mapContainer"></iframe>
 
-
+        
     </div>
 
     <!-- ****************************** End Main Content Area *************************************-->
