--- a/schedule_events.html
+++ b/schedule_events.html
@@ -12,7 +12,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
 
-    <title>Gig$</title>
+    <title>Giggly</title>
 
     <link rel="stylesheet" type="text/css" href="styles/main.css">
 
@@ -22,7 +22,7 @@
 <body>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="index.html">Gigly</a>
+        <a class="navbar-brand" href="index.html">Giggly</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
             aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -77,7 +77,7 @@
 
         <div class="eventCardSet">
             <div class="card eventCard align-top">
-                <img class="card-img-top" src="images/placeholderEvent.png">
+                <img class="card-img-top" src="images/event_hubweek.png">
                 <div class="card-body">
                     <h5 class="card-title">Hubweek 2018 | City Hall Plaza</h5>
                     <p class="card-text">Brief description if it's available.
@@ -89,7 +89,7 @@
             </div>
 
             <div class="card eventCard align-top">
-                <img class="card-img-top" src="images/placeholderEvent.png">
+                <img class="card-img-top" src="images/event_redsox.png">
                 <div class="card-body">
                     <h5 class="card-title">Boston Red Sox | Fenway</h5>
                     <p class="card-text">Brief description if it's available.
@@ -101,7 +101,7 @@
             </div>
 
             <div class="card eventCard align-top">
-                <img class="card-img-top" src="images/placeholderEvent.png">
+                <img class="card-img-top" src="images/event_florence.png">
                 <div class="card-body">
                     <h5 class="card-title">Florence and the Machines | TD Garden</h5>
                     <p class="card-text">Brief description if it's available.
@@ -112,7 +112,7 @@
             </div>
 
             <div class="card eventCard align-top">
-                <img class="card-img-top" src="images/placeholderEvent.png">
+                <img class="card-img-top" src="images/event_gorillaz.png">
                 <div class="card-body">
                     <h5 class="card-title">Gorillaz | TD Garden</h5>
                     <p class="card-text">Brief description if it's available.
