--- a/schedule_map.html
+++ b/schedule_map.html
@@ -21,8 +21,8 @@
 
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="index.html">Giggly</a>
+    <nav class="navbar navbar-expand-lg navbar-light navColor">
+        <a class="navbar-brand" href="index.html"><img src="images/gigglylogo.png" class="logoSize"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
             aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -37,7 +37,7 @@
                     <a class="nav-link" href="schedule.html">My schedule</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="community.html">My community</a>
+                    <a class="nav-link" href="http://site-1518791-5931-7055.strikingly.com/">Ecosystem</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="dreams.html">My dreams</a>
@@ -45,9 +45,7 @@
                 <li class="nav-item">
                     <a class="nav-link" href="budget.html">My budget</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="support.html">Customer support</a>
-                </li>
+                
             </ul>
             <button class="btn btn-outline-success my-2 my-sm-0">Log out</button>
         </div>
