--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
 
     <nav class="navbar navbar-expand-lg navbar-light navColor">
-        <a class="navbar-brand" href="index.html">Giggly</a>
+        <a class="navbar-brand" href="index.html"><img src="images/gigglylogo.png" class="logoSize"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
             aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -37,16 +37,13 @@
                     <a class="nav-link" href="schedule.html">My schedule</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="community.html">My community</a>
+                    <a class="nav-link" href="http://site-1518791-5931-7055.strikingly.com/">Ecosystem</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="dreams.html">My dreams</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="budget.html">My budget</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="support.html">Customer support</a>
                 </li>
             </ul>
             <button class="btn btn-outline-success my-2 my-sm-0">Log out</button>
@@ -55,16 +52,15 @@
 
 
     <!-- ******************************** Main Content Area *********************************-->
-
     <div class="jumbotron">
-        <div class="container">
+        <div class="container heroText">
             <h1 class="display-4">Can you gig it?</h1>
             <p class="lead">Putting money in your pocket. Earn what you want when you need.</p>
-            <hr class="my-4">
+            <hr class="my-4" hidden>
             <p>Creating an integrated lifestyle of work and play on your time.</p>
             <a class="btn btn-primary btn-lg" href="work.html" role="button">Get Started</a>
-            <a href="#" role="button" hidden>Sign In</a>
         </div>
+        
     </div>
 
     <div class="container">
