--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <a class="nav-link" href="budget.html">My budget</a>
                 </li>
             </ul>
-            <button class="btn btn-outline-success my-2 my-sm-0">Log out</button>
+            <button class="btn btn-outline-primary my-2 my-sm-0">Log out</button>
         </div>
     </nav>
 
@@ -63,8 +63,8 @@
         
     </div>
 
-    <div class="container">
-        <h2>Find work</h2>
+    <a href="work.html"><div class="container">
+        <h2>Find gigs that work for you</h2>
         <p>Choose from dozens of sites that provide gig jobs. Some of the site that we support include:</p>
         <div class="container">
             <div class="row">
@@ -91,44 +91,28 @@
             </div>
 
         </div>
-    </div>
+    </div></a>
 
+
+    <a href="schedule_map.html"><div class="container mapBg">
+        <hr class="my-4">
+        <h2>Get the best route to all of your gigs</h2>
+        <div><img src="images/brand_map_quote.png" class="img-fluid"></div>
+    </div></a>
+
+
+    <a href="http://site-1518791-5931-7055.strikingly.com/"><div class="container">
+        <hr class="my-4">
+        <h2>Get help in our ecosystem</h2>
+        <div class="wireframeBlock">Some kind of awesome visual</div>
+    </div></a>
 
     <div class="container">
         <hr class="my-4">
-        <h2>My schedule</h2>
-        <p>Some sort of awesome value prop</p>
-        <div class="wireframeBlock">Some kind of awesome visual</div>
+        <h2>Explore all of the options Giggly offers</h2>
+        <div class="mx-auto" style="width:60%"><img src="images/wheel.png" class="img-fluid"></div>
     </div>
 
-
-    <div class="container">
-        <hr class="my-4">
-        <h2>My community</h2>
-        <p>Some sort of awesome value prop</p>
-        <div class="wireframeBlock">Some kind of awesome visual</div>
-    </div>
-
-    <div class="container">
-        <hr class="my-4">
-        <h2>My dream</h2>
-        <p>Some sort of awesome value prop</p>
-        <div class="wireframeBlock">Some kind of awesome visual</div>
-    </div>
-
-    <div class="container">
-        <hr class="my-4">
-        <h2>My budget</h2>
-        <p>Some sort of awesome value prop</p>
-        <div class="wireframeBlock">Some kind of awesome visual</div>
-    </div>
-
-    <div class="container">
-        <hr class="my-4">
-        <h2>Customer support</h2>
-        <p>Some sort of awesome value prop</p>
-        <div class="wireframeBlock">Some kind of awesome visual</div>
-    </div>
 
     <!-- ****************************** End Main Content Area *************************************-->
 
