--- a/schedule(google).html
+++ b/schedule(google).html
@@ -49,7 +49,7 @@
                     <a class="nav-link" href="support.html">Customer support</a>
                 </li>
             </ul>
-            <button class="btn btn-outline-success my-2 my-sm-0">Log out</button>
+            <button class="btn btn-outline-primary my-2 my-sm-0">Log out</button>
         </div>
     </nav>
 
