--- a/schedule.html
+++ b/schedule.html
@@ -46,7 +46,7 @@
                     <a class="nav-link" href="budget.html">My budget</a>
                 </li>
             </ul>
-            <button class="btn btn-outline-success my-2 my-sm-0">Log out</button>
+            <button class="btn btn-outline-primary my-2 my-sm-0">Log out</button>
         </div>
     </nav>
 
