--- a/schedule_events.html
+++ b/schedule_events.html
@@ -47,7 +47,7 @@
                 </li>
             
             </ul>
-            <button class="btn btn-outline-success my-2 my-sm-0">Log out</button>
+            <button class="btn btn-outline-primary my-2 my-sm-0">Log out</button>
         </div>
     </nav>
 
