--- a/budget.html
+++ b/budget.html
@@ -56,7 +56,7 @@
         <h1 class="display-4 mt-4">
             My budget
         </h1>
-        <p class="lead">Thanks for checking out this section. We'll be getting to this soon...</p>
+        <div class="mx-auto budgetImage"><img src="images/budget.gif" class="img-fluid"></div>
     </div>
 
     <!-- ****************************** End Main Content Area *************************************-->
