--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
     <!-- ******************************** Main Content Area *********************************-->
     <div class="jumbotron">
         <div class="container heroText">
-            <h1 class="display-4">Can you gig it?</h1>
-            <p class="lead">Putting money in your pocket. Earn what you want when you need.</p>
+            <h1 class="display-4">Your personal assitant for your gig economy jobs</h1>
+            <p class="lead">Whether you're a tasker, or driver, or something else, we're hear for you.</p>
             <hr class="my-4" hidden>
             <p>Creating an integrated lifestyle of work and play on your time.</p>
             <a class="btn btn-primary btn-lg" href="work.html" role="button">Get Started</a>
@@ -63,7 +63,14 @@
         
     </div>
 
+    <a href="schedule_map.html"><div class="container mapBg">
+            <hr class="my-4">
+            <h2>Optimize your day</h2>
+            <div><img src="images/brand_map_quote.png" class="img-fluid"></div>
+        </div></a>
+
     <a href="work.html"><div class="container">
+        <hr class="my-4">
         <h2>Find gigs that work for you</h2>
         <p>Choose from dozens of sites that provide gig jobs. Some of the site that we support include:</p>
         <div class="container">
@@ -94,11 +101,7 @@
     </div></a>
 
 
-    <a href="schedule_map.html"><div class="container mapBg">
-        <hr class="my-4">
-        <h2>Get the best route to all of your gigs</h2>
-        <div><img src="images/brand_map_quote.png" class="img-fluid"></div>
-    </div></a>
+    
 
 
     <a href="http://site-1518791-5931-7055.strikingly.com/"><div class="container">
