--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
     <a href="schedule_map.html"><div class="container mapBg">
             <hr class="my-4">
-            <h2>Optimize your day</h2>
+            <h2>Optimize your day for maximum productivity</h2>
             <div><img src="images/brand_map_quote.png" class="img-fluid"></div>
         </div></a>
 
