--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
     <a href="work.html"><div class="container">
         <hr class="my-4">
-        <h2>Find gigs that work for you</h2>
+        <h2>Connect all your gig platforms</h2>
         <p>Choose from dozens of sites that provide gig jobs. Some of the site that we support include:</p>
         <div class="container">
             <div class="row">
