--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
     <!-- ******************************** Main Content Area *********************************-->
     <div class="jumbotron">
         <div class="container heroText">
-            <h1 class="display-4">Your personal assitant for your gig economy jobs</h1>
-            <p class="lead">Whether you're a tasker, or driver, or something else, we're hear for you.</p>
+            <h1 class="display-4">Your personal assistant for your gig economy jobs</h1>
+            <p class="lead">Whether you're a tasker, or driver, or something else, we're here for you.</p>
             <hr class="my-4" hidden>
             <p>Creating an integrated lifestyle of work and play on your time.</p>
             <a class="btn btn-primary btn-lg" href="work.html" role="button">Get Started</a>
@@ -107,7 +107,7 @@
     <a href="http://site-1518791-5931-7055.strikingly.com/"><div class="container">
         <hr class="my-4">
         <h2>Get help in our ecosystem</h2>
-        <div class="wireframeBlock">Some kind of awesome visual</div>
+        <div class="text-center lightContainer"><img src="images/light.png" class="lightImage"></div>
     </div></a>
 
     <div class="container">
