--- a/schedule.html
+++ b/schedule.html
@@ -22,7 +22,9 @@
 <body>
 
     <nav class="navbar navbar-expand-lg navbar-light navColor">
-        <a class="navbar-brand" href="index.html"><img src="images/gigglylogo.png" class="logoSize"></a>
+        <a class="navbar-brand" href="index.html">
+            <img src="images/gigglylogo.png" class="logoSize">
+        </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
             aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -69,9 +71,17 @@
             </li>
         </ul>
 
+        <p class="lead text-center">October 11, 2018</p>
+
+        <div class="mx-auto budgetImage">
+            <img src="images/calendar.png" class="img-fluid">
+        </div>
+
+        
+
 
         <!-- *********************** Start Calendar ************************-->
-        <p class="lead text-center">October 11, 2018</p>
+        <!--  
 
         <div class="calendarContainer">
             <div class="hourRow">
