--- a/schedule_map.html
+++ b/schedule_map.html
@@ -22,7 +22,9 @@
 <body>
 
     <nav class="navbar navbar-expand-lg navbar-light navColor">
-        <a class="navbar-brand" href="index.html"><img src="images/gigglylogo.png" class="logoSize"></a>
+        <a class="navbar-brand" href="index.html">
+            <img src="images/gigglylogo.png" class="logoSize">
+        </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
             aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -45,7 +47,7 @@
                 <li class="nav-item">
                     <a class="nav-link" href="budget.html">My budget</a>
                 </li>
-                
+
             </ul>
             <button class="btn btn-outline-primary my-2 my-sm-0">Log out</button>
         </div>
@@ -71,9 +73,17 @@
         </ul>
 
 
+        <!--
         <iframe src="map.html" class="mapContainer"></iframe>
+        -->
 
+        <p class="lead text-center">October 11, 2018</p>
         
+        <div class="mx-auto budgetImage">
+            <img src="images/map.png" class="img-fluid">
+        </div>
+
+
     </div>
 
     <!-- ****************************** End Main Content Area *************************************-->
