--- a/schedule_events.html
+++ b/schedule_events.html
@@ -110,7 +110,7 @@
             </div>
 
             <div class="card eventCard align-top">
-                <img class="card-img-top" src="images/event_gorillaz.png">
+                <img class="card-img-top" src="images/event_gorillaz2.png">
                 <div class="card-body">
                     <h5 class="card-title">Gorillaz | TD Garden</h5>
                     <p class="card-text">Brief description if it's available.
