--- a/schedule_events.html
+++ b/schedule_events.html
@@ -109,7 +109,7 @@
                 </div>
             </div>
 
-            <div class="card eventCard align-top">
+            <div class="card eventCard align-top" hidden>
                 <img class="card-img-top" src="images/event_gorillaz2.png">
                 <div class="card-body">
                     <h5 class="card-title">Gorillaz | TD Garden</h5>
