--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <!-- ******************************** Main Content Area *********************************-->
     <div class="jumbotron">
         <div class="container heroText">
-            <h1 class="display-4">Your personal assistant for your gig economy jobs</h1>
+            <h1 class="display-4">Let us be your personal assistant</h1>
             <p class="lead">Whether you're a tasker, or driver, or something else, we're here for you.</p>
             <hr class="my-4" hidden>
             <p>Creating an integrated lifestyle of work and play on your time.</p>
